--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,3 +1,7 @@
-<button [class]="['button', 'button-' + type]" [disabled]="disabled">
+<button
+  [type]="type"
+  [class]="['button', style + '-' + size]"
+  [disabled]="disabled"
+>
   <ng-content></ng-content>
 </button>
