--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -31,7 +31,7 @@
     <a class="gradient-text bottom-text" href="#">Zapomniałeś hasła?</a>
   </div>
   <div class="buttons">
-    <app-button type="big" (click)="onSubmit()">Zaloguj</app-button>
+    <app-button size="big" (click)="onSubmit()">Zaloguj</app-button>
   </div>
 </div>
 <div class="footer">
