--- a/src/app/shared/components/register-form/register-form.component.html
+++ b/src/app/shared/components/register-form/register-form.component.html
@@ -92,7 +92,7 @@
       </div>
     </div>
     <div class="buttons">
-      <app-button type="big" (click)="onSubmit()">Rejestracja</app-button>
+      <app-button size="big" (click)="onSubmit()">Rejestracja</app-button>
     </div>
   </div>
   <div class="footer">
