--- a/src/app/shared/components/lesson/lesson.component.html
+++ b/src/app/shared/components/lesson/lesson.component.html
@@ -1,12 +1,25 @@
-<mat-card [routerLink]="'/main-page/lesson/' + lesson.id" class="lesson mt-3">
-  <mat-card-header class="mb-3">
-    <div class="col-10">
+<app-gradient-card [routerLink]="'/main-page/lesson/' + lesson.id">
+  <div class="lesson">
+    <div class="title">
       {{ lesson.title }}
-      <fa-icon (click)="editLesson()" [icon]="faPencil"></fa-icon>
-      <fa-icon (click)="deleteLesson()" [icon]="faXmark"></fa-icon>
+      <app-button
+        (click)="editLesson($event)"
+        [style]="'outline'"
+        [size]="'small'"
+      >
+        Edytuj
+      </app-button>
+      <app-button
+        (click)="deleteLesson($event)"
+        [style]="'outline'"
+        [size]="'small'"
+      >
+        Usuń
+      </app-button>
     </div>
-    <div class="col-2">
-      <strong>Czas trwania:</strong> {{ lesson.duration }}
+    <div class="time">
+      <img class="icon" src="assets/icons/clock.svg" />
+      {{ lesson.duration }}
     </div>
-  </mat-card-header>
-</mat-card>
+  </div>
+</app-gradient-card>
